--- a/src/components/Countdown/Countdown.css
+++ b/src/components/Countdown/Countdown.css
@@ -64,7 +64,7 @@
   justify-content: center;
 }
 .clock-wrap {
-  padding: 20px;
+  padding: 0px;
 }
 .clock-timer {
   font-size: 60px;
